<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.contactsaddressbook.ContactList">

    <Button
        android:id="@+id/buttonOne"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="151dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/buttonOne"
        android:text="@string/buttonOne"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwo"
        app:layout_constraintStart_toStartOf="@+id/buttonTwo"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        tools:text="@string/buttonOne" />

    <Button
        android:id="@+id/buttonTwo"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="206dp"
        android:layout_marginStart="114dp"
        android:contentDescription="@string/buttonTwo"
        android:text="@string/buttonTwo"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOne"
        tools:text="@string/buttonTwo" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/txtTitle"
        android:text="@string/txtTitle"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txtTitle" />
</android.support.constraint.ConstraintLayout>
